--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: Install NodeJS
-      - uses: actions/setup-node@v3
-      - with:
+        uses: actions/setup-node@v3
+        with:
           node-version: 18
       - name: Install dependencies
         run: npm ci
