--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,5 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
-      - name: Run tests
-        run: npm tests
+      - name: Run test
+        run: npm test
