--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build project
-        run: npn run build
+        run: npm run build
       - name: deploy
         run: echo "deploy"
